# frontend

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: desktop.yaml  web.yaml
android/: build.gradle.kts  rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/: MainActivity.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Compiler.kt  Targets.kt  multiplatform-module.gradle.kts
cli/: build.gradle.kts
cli/src/commonMain/kotlin/: Main.kt
client/: build.gradle.kts
client/src/commonMain/kotlin/: Client.kt  Customer.kt  Format.kt  Identifiable.kt  Reading.kt
common/: build.gradle.kts
common/src/androidMain/kotlin/: Platform.android.kt
common/src/appleMain/kotlin/: Platform.apple.kt
common/src/commonMain/kotlin/: App.kt  CustomersScreen.kt  Platform.kt  ReadingsScreen.kt  Theme.kt
common/src/fileChooserMain/kotlin/: root.kt
common/src/jvmMain/kotlin/: Platform.jvm.kt
common/src/skiaMain/kotlin/: Platform.kt
common/src/wasmJsMain/kotlin/: Platform.wasmJs.kt
desktop/: build.gradle.kts  rules.pro
desktop/src/main/kotlin/: Main.kt
file_dialog/: build.gradle.kts
gradle/: libs.versions.toml
ios/: Podfile  build.gradle.kts
ios/ios/: ContentView.swift
ios/ios.xcodeproj/: project.pbxproj
native_helper/: Cargo.toml  build.gradle.kts
native_helper/src/: file_dialogs.rs  lib.rs
native_helper/src/main/kotlin/: FileDialogs.kt  NativeTools.kt
web/: Dockerfile  build.gradle.kts
web/src/commonMain/: package-lock.json  package.json
(+78 files in other folders)
