[package]
name = "native_helper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
safer-ffi = "0.1.12"

[dependencies.rfd]
version = "0.15.2"
default-features = false
features = ["xdg-portal"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[features]
headers = ["safer-ffi/headers"]
