[package]
name = "native_helper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
safer-ffi = "0.1.12"

[dependencies.rfd]
git = "https://github.com/PolyMeilex/rfd.git"
rev = "24842c4"

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[features]
headers = ["safer-ffi/headers"]
